# warden

./: .env.example  .gitignore  DISCORD_SETUP.md  README.md  WHATSAPP_SETUP.md  pyproject.toml
deploy/: install.sh  warden-discord.service  warden-sentinel.service  warden-sentinel.timer  warden-summary.service  warden-summary.timer  warden-webhook.service
evals/: run.py
evals/fixtures/: container-down-filebrowser.json  disk-pressure.json  stalled-torrent.json
tests/: conftest.py  test_approvals.py  test_config_paths.py  test_discord.py  test_discord_buttons.py  test_discord_slash.py  test_openai_agent.py  test_plex_webhook.py  test_reaper.py  test_redaction.py  test_rules.py  test_runner_buttons.py  test_store.py  test_summary.py  test_tiers.py  test_userstats.py  test_webhook.py
warden/: config.py  presence.py  store.py  summary.py  userstats.py
warden/agent/: openai_runner.py  openai_tools.py  report.py  runner.py  tiers.py  tools.py
warden/backends/: __init__.py  live.py  replay.py
warden/notifier/: __init__.py  components.py  discord.py  discord_commands.py  discord_gateway.py  discord_poller.py  logchannel.py  whatsapp.py
warden/sentinel/: collectors.py  reaper.py  rules.py  run.py
warden/webhook/: app.py  approvals.py  plex.py
