[project]
name = "warden"
version = "0.1.0"
description = "Self-healing infrastructure agent: monitors a Docker media server, diagnoses incidents with the Claude Agent SDK, and heals it under tiered human-approval permissions."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "openai>=1.40",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["warden*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
